# FreeRDP

./: CMakeLists.txt
channels/drive/client/: drive_main.c
channels/rdpdr/client/: rdpdr_main.c
channels/rdpei/client/: rdpei_main.c
channels/rdpsnd/client/: rdpsnd_main.c
channels/serial/client/: serial_main.c
client/: CMakeLists.txt
client/Mac/: AppDelegate.h  CMakeLists.txt  MRDPRailView.m  MRDPRailWindow.m  MRDPView.m
client/Mac/MacClient2/: AppDelegate.h  AppDelegate.m
client/Mac/MacFreeRDP-client/: CMakeLists.txt
client/Mac/MacFreeRDP-library/: CMakeLists.txt  Info.plist  MacFreeRDP-library-Info.plist  MacFreeRDP-library-Prefix.pch
client/Mac/cli/: CMakeLists.txt
client/Mac_old/: AppDelegate.m  CMakeLists.txt  MRDPRailView.h
client/common/: cmdline.c  file.c
libfreerdp/core/: transport.c
libfreerdp/utils/: svc_plugin.c
winpr/include/winpr/: thread.h
winpr/libwinpr/handle/: handle.c
winpr/libwinpr/thread/: thread.c  thread.h
